Fix for loader flickering

--- a/src/app/auth/auth.component.styl
+++ b/src/app/auth/auth.component.styl
@@ -41,3 +41,9 @@ button.test
   margin-left: auto
   margin-top: 1rem
   margin-bottom: 1rem
+
+.auth-loader
+  position: absolute
+  margin: 0 auto
+  left: 0
+  right: 0
